# bitonic_sort

./: .gitignore  CMakeLists.txt  add_simd_tests_and_run.sh  build_and_run_benchmarks.sh  build_and_test.sh  generate_benchmark_plots.sh  generate_report.sh  setup_and_run_benchmarks.sh  translate_report_to_cn.sh  vcpkg.json
benchmarks/: CMakeLists.txt  benchmark_main.cpp
doc/: report-cn.md  report.md
doc/data/: performance_results.csv
src/: CMakeLists.txt  bitonic_sort.h  openmp_bitonic_sorter.cpp  openmp_bitonic_sorter.h  plain_bitonic_sorter.cpp  plain_bitonic_sorter.h  simd_bitonic_sorter.cpp  simd_bitonic_sorter.h  std_thread_bitonic_sorter.cpp  std_thread_bitonic_sorter.h
tests/: CMakeLists.txt  test_openmp_sorter.cpp  test_plain_sorter.cpp  test_simd_sorter.cpp  test_std_thread_sorter.cpp
utils/: plot_benchmarks.py
